--- a/nrakpo/src/main/resources/application.properties
+++ b/nrakpo/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#Metrics related configurations
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
